python_generated/SPLParser.py
# Generated from SPL.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SPLParser ( Parser ):

    grammarFileName = "SPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'and'", "'or'", 
                     "'var'", "'print'", "'if'", "'else'", "'while'", "';'", 
                     "'('", "')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", 
                     "'!'", "'='", "'=='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "AND", "OR", "VAR", 
                      "PRINT", "IF", "ELSE", "WHILE", "SEMICOLON", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "NOT", "EQUAL", "COMPARE", "NOT_EQUAL", 
                      "GREATER", "LESS", "GREATER_THEN", "LESS_THEN", "STRING", 
                      "NUMBER", "IDENTIFIER", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDecl = 2
    RULE_statement = 3
    RULE_exprStmt = 4
    RULE_ifStmt = 5
    RULE_printStmt = 6
    RULE_whileStmt = 7
    RULE_block = 8
    RULE_expression = 9
    RULE_assignment = 10
    RULE_logic_or = 11
    RULE_logic_and = 12
    RULE_equality = 13
    RULE_comparison = 14
    RULE_term = 15
    RULE_factor = 16
    RULE_unary = 17
    RULE_primary = 18

    ruleNames =  [ "program", "declaration", "varDecl", "statement", "exprStmt", 
                   "ifStmt", "printStmt", "whileStmt", "block", "expression", 
                   "assignment", "logic_or", "logic_and", "equality", "comparison", 
                   "term", "factor", "unary", "primary" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    AND=3
    OR=4
    VAR=5
    PRINT=6
    IF=7
    ELSE=8
    WHILE=9
    SEMICOLON=10
    LPAREN=11
    RPAREN=12
    LBRACE=13
    RBRACE=14
    PLUS=15
    MINUS=16
    MULTIPLY=17
    DIVIDE=18
    NOT=19
    EQUAL=20
    COMPARE=21
    NOT_EQUAL=22
    GREATER=23
    LESS=24
    GREATER_THEN=25
    LESS_THEN=26
    STRING=27
    NUMBER=28
    IDENTIFIER=29
    COMMENT=30
    WS=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SPLParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SPLParser.DeclarationContext,i)


        def getRuleIndex(self):
            return SPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 940124902) != 0):
                self.state = 38
                self.declaration()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(SPLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(SPLParser.VarDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(SPLParser.StatementContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = SPLParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.varDecl()
                pass
            elif token in [1, 2, 6, 7, 9, 11, 13, 16, 19, 27, 28, 29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(SPLParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(SPLParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(SPLParser.SEMICOLON, 0)

        def EQUAL(self):
            return self.getToken(SPLParser.EQUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(SPLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = SPLParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(SPLParser.VAR)
            self.state = 51
            self.match(SPLParser.IDENTIFIER)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 52
                self.match(SPLParser.EQUAL)
                self.state = 53
                self.expression()


            self.state = 56
            self.match(SPLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprStmt(self):
            return self.getTypedRuleContext(SPLParser.ExprStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(SPLParser.IfStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(SPLParser.PrintStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(SPLParser.WhileStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(SPLParser.BlockContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SPLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 11, 16, 19, 27, 28, 29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.exprStmt()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.ifStmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.printStmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.whileStmt()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SPLParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(SPLParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SPLParser.RULE_exprStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)




    def exprStmt(self):

        localctx = SPLParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exprStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.expression()
            self.state = 66
            self.match(SPLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SPLParser.IF, 0)

        def LPAREN(self):
            return self.getToken(SPLParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SPLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(SPLParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.StatementContext)
            else:
                return self.getTypedRuleContext(SPLParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(SPLParser.ELSE, 0)

        def getRuleIndex(self):
            return SPLParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = SPLParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(SPLParser.IF)
            self.state = 69
            self.match(SPLParser.LPAREN)
            self.state = 70
            self.expression()
            self.state = 71
            self.match(SPLParser.RPAREN)
            self.state = 72
            self.statement()
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 73
                self.match(SPLParser.ELSE)
                self.state = 74
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(SPLParser.PRINT, 0)

        def expression(self):
            return self.getTypedRuleContext(SPLParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(SPLParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SPLParser.RULE_printStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = SPLParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_printStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(SPLParser.PRINT)
            self.state = 78
            self.expression()
            self.state = 79
            self.match(SPLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SPLParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(SPLParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(SPLParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(SPLParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(SPLParser.StatementContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = SPLParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SPLParser.WHILE)
            self.state = 82
            self.match(SPLParser.LPAREN)
            self.state = 83
            self.expression()
            self.state = 84
            self.match(SPLParser.RPAREN)
            self.state = 85
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SPLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SPLParser.RBRACE, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SPLParser.DeclarationContext,i)


        def getRuleIndex(self):
            return SPLParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SPLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(SPLParser.LBRACE)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 940124902) != 0):
                self.state = 88
                self.declaration()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(SPLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SPLParser.AssignmentContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = SPLParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.assignment()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(SPLParser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(SPLParser.EQUAL, 0)

        def assignment(self):
            return self.getTypedRuleContext(SPLParser.AssignmentContext,0)


        def logic_or(self):
            return self.getTypedRuleContext(SPLParser.Logic_orContext,0)


        def getRuleIndex(self):
            return SPLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SPLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.match(SPLParser.IDENTIFIER)
                self.state = 99
                self.match(SPLParser.EQUAL)
                self.state = 100
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.logic_or()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_orContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_and(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.Logic_andContext)
            else:
                return self.getTypedRuleContext(SPLParser.Logic_andContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.OR)
            else:
                return self.getToken(SPLParser.OR, i)

        def getRuleIndex(self):
            return SPLParser.RULE_logic_or

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_or" ):
                listener.enterLogic_or(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_or" ):
                listener.exitLogic_or(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_or" ):
                return visitor.visitLogic_or(self)
            else:
                return visitor.visitChildren(self)




    def logic_or(self):

        localctx = SPLParser.Logic_orContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_logic_or)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.logic_and()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 105
                self.match(SPLParser.OR)
                self.state = 106
                self.logic_and()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_andContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.EqualityContext)
            else:
                return self.getTypedRuleContext(SPLParser.EqualityContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.AND)
            else:
                return self.getToken(SPLParser.AND, i)

        def getRuleIndex(self):
            return SPLParser.RULE_logic_and

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_and" ):
                listener.enterLogic_and(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_and" ):
                listener.exitLogic_and(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_and" ):
                return visitor.visitLogic_and(self)
            else:
                return visitor.visitChildren(self)




    def logic_and(self):

        localctx = SPLParser.Logic_andContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_logic_and)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.equality()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 113
                self.match(SPLParser.AND)
                self.state = 114
                self.equality()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.ComparisonContext)
            else:
                return self.getTypedRuleContext(SPLParser.ComparisonContext,i)


        def NOT_EQUAL(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.NOT_EQUAL)
            else:
                return self.getToken(SPLParser.NOT_EQUAL, i)

        def COMPARE(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.COMPARE)
            else:
                return self.getToken(SPLParser.COMPARE, i)

        def getRuleIndex(self):
            return SPLParser.RULE_equality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquality" ):
                listener.enterEquality(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquality" ):
                listener.exitEquality(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquality" ):
                return visitor.visitEquality(self)
            else:
                return visitor.visitChildren(self)




    def equality(self):

        localctx = SPLParser.EqualityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_equality)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.comparison()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21 or _la==22:
                self.state = 121
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 122
                self.comparison()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.TermContext)
            else:
                return self.getTypedRuleContext(SPLParser.TermContext,i)


        def GREATER(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.GREATER)
            else:
                return self.getToken(SPLParser.GREATER, i)

        def GREATER_THEN(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.GREATER_THEN)
            else:
                return self.getToken(SPLParser.GREATER_THEN, i)

        def LESS(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.LESS)
            else:
                return self.getToken(SPLParser.LESS, i)

        def LESS_THEN(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.LESS_THEN)
            else:
                return self.getToken(SPLParser.LESS_THEN, i)

        def getRuleIndex(self):
            return SPLParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = SPLParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.term()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 125829120) != 0):
                self.state = 129
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 125829120) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 130
                self.term()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SPLParser.FactorContext)
            else:
                return self.getTypedRuleContext(SPLParser.FactorContext,i)


        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(SPLParser.MINUS)
            else:
                return self.getToken(SPLParser.MINUS, i)
